--- a/index.html
+++ b/index.html
@@ -99,14 +99,13 @@
             <hr>
         </div>
         <section class="projetos" id="projetos">
-
                 <div class="container00 container-projetos">
                     <h3>Projetos</h3>
                     <p>
                         Abaixo estarão listados alguns projetos na qual realizei no decorrer de alguns cursos.
                     </p>
-                    <ul class="lista">
-                        <li data-aos="zoom-out" data-aos-duration="2000">
+                    <div class="lista">
+                        <div class="item-lista" data-aos="zoom-out" data-aos-duration="2000">
                             <a href="https://thenrybruno.github.io/clone-spacex/" target="_blank" rel="noopener noreferrer">
                                 <h4>Clone da SpaceX</h4>
                                 <div>
@@ -117,8 +116,8 @@
                                 Projeto realizado no decorrer do curso ministrado pela OneBitCode. Clone do site da SpaceX, co algumas
                                 animações e navegação entre páginas.
                             </p>
-                        </li>
-                        <li data-aos="zoom-out" data-aos-duration="2000">
+                        </div>
+                        <div class="item-lista" data-aos="zoom-out" data-aos-duration="2000">
                             <a href="https://thenrybruno.github.io/nadiacare/" target="_blank" rel="noopener noreferrer">
                                 <h4>Nádia Care</h4>
                                 <div>
@@ -129,8 +128,8 @@
                                 Primeiro projeto pessoal feito, nele coloquei em prática alguns conhecimentos obtidos em alguns cursos
                                 realizados.
                             </p>
-                        </li>
-                        <li data-aos="zoom-out" data-aos-duration="2000">
+                        </div>
+                        <div class="item-lista" data-aos="zoom-out" data-aos-duration="2000">
                             <a href="https://thenrybruno.github.io/calculadora-de-gorjeta/" target="_blank" rel="noopener noreferrer">
                                 <h4>Calculadora de Gorjetas</h4>
                                 <div>
@@ -141,8 +140,8 @@
                                 Projeto realizado no decorrer do curso ministrado pela OneBitCode. Uma ferramenta para calcular o valor
                                 de gorjeta a ser pago, através da qualidade do serviço e total da conta e pessoas.
                             </p>
-                        </li>
-                        <li data-aos="zoom-out" data-aos-duration="2000">
+                        </div>
+                        <div class="item-lista" data-aos="zoom-out" data-aos-duration="2000">
                             <a href="http://thenrybruno.github.io/pokedex/" target="_blank" rel="noopener noreferrer">
                                 <h4>Pokedéx</h4>
                                 <div>
@@ -153,8 +152,8 @@
                                 Projeto realizado no decorrer do curso ministrado pelo canal Dev em Dobro. Uma pokedéx com informações
                                 de alguns pokémons.
                             </p>
-                        </li>
-                        <li data-aos="zoom-out" data-aos-duration="2000">
+                        </div>
+                        <div class="item-lista" data-aos="zoom-out" data-aos-duration="2000">
                             <a href="http://thenrybruno.github.io/pokemon-slider/" target="_blank" rel="noopener noreferrer">
                                 <h4>Pokemon Slider</h4>
                                 <div>
@@ -165,8 +164,8 @@
                                 Projeto realizado no decorrer do curso ministrado pelo canal Dev em Dobro. Um carrossel feito com
                                 Javascript puro, nele encontra-se informações de alguns pokémons.
                             </p>
-                        </li>
-                        <li data-aos="zoom-out" data-aos-duration="2000">
+                        </div>
+                        <div class="item-lista" data-aos="zoom-out" data-aos-duration="2000">
                             <a href="https://thenrybruno.github.io/portifolio/" target="_blank" rel="noopener noreferrer">
                                 <h4>Meu Portifólio</h4>
                                 <div>
@@ -177,8 +176,8 @@
                                 Segundo projeto pessoal realizado. Portifólio criado com o intuito de falar um poco mais de mim e
                                 mostrar minhas habilidades.
                             </p>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
                 </div>
 
         </section>
